# yogurtyojung

./: .gitignore  01_파이썬_기초_문법(변수,자료형)_blank.ipynb  02_파이썬_기초_문법(제어문)_blank.ipynb  03_파이썬_기초_문법(함수)_blank.ipynb  04_넘파이_blank.ipynb  04_넘파이_기초.ipynb  04_실습.ipynb  04_판다스_blank.ipynb  04_판다스_보충.ipynb  05_시각화.ipynb  06_데이터분석_서울특별시_꽁공자전거_실습.ipynb  07_자연어처.ipynb  07_자연어처리.ipynb  README.md  java_education.ipynb  kiwi_education.ipynb  main.py  pyproject.toml  공공자전거 데이터 가지고 놀아보기.ipynb  김유정 데이터 분석 정리.md  배달의민족댓글.csv  배달의민족댓글2.csv  자습(001-100).ipynb
lord/: yo_text.txt
