[project]
name = "250714"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "jpype1>=1.6.0",
    "jupyter>=1.1.1",
    "konlpy>=0.6.0",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.3",
    "mss>=10.0.0",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pyreadstat>=1.3.0",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
]
