[project]
name = "java"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-api-python-client>=2.176.0",
    "jpype1>=1.6.0",
    "jupyter>=1.1.1",
    "kiwipiepy>=0.21.0",
    "konlpy>=0.6.0",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.3",
    "mlxtend>=0.23.4",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
]
